Added two endpoints books-authors, corrected dependencies from user id
